add two controller and schema

--- a/backend/views/index.html
+++ b/backend/views/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    Index, I am so good
+    Index, I am so good. Today you are my main job
   </body>
 </html>
